--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.20.5",
     "@react-oauth/google": "^0.12.1",
+    "add": "^2.0.6",
     "axios": "^1.7.9",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
@@ -27,6 +29,7 @@
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "shadcn": "^2.1.8",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
